# conan-tinyxml

./: CMakeLists.txt  README.md  conanfile.py  upstream.txt
.github/workflows/: ci-conan-clang.yml  ci-conan-gcc.yml  ci-conan-msvc.yml
lib_license/: LICENSE
test_package/: CMakeLists.txt  conanfile.py  xmltest.cpp
